--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "express-session": "^1.15.6",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
-    "lodash": "^4.17.13",
+    "lodash": "^4.17.20",
     "morgan": "^1.9.0",
     "node-fetch": "^2.1.2",
     "react": "^16.4.0",
     "react-apollo": "^2.1.5",
     "react-dom": "^16.4.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "3.1.2",
+    "react-scripts": "^3.4.3",
     "uuid": "^3.2.1"
   },
   "scripts": {
@@ -38,7 +38,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "nodemon": "^1.18.7",
+    "nodemon": "^2.0.4",
     "request-debug": "^0.2.0"
   },
   "browserslist": [
